# TraMagNet

./: .gitattributes.txt  README.md  pyproject.toml  requirements.txt
ablation/dncnn_only/: train.py  train_dncnn.py
ablation/unet_single/: train.py  train_unet.py
configs/: dncnn.yaml  dncnn_ablation.yaml  tramagnet.yaml  unet_ablation.yaml
data/: README.md
datasets/gaussian_noise/: README.md
datasets/high-voltage_cable/: README.md
datasets/subway/: README.md
main/: common_train_cli.py  eval_metrics.py  loss_eval.py  visualize_data.py
main/DnCNN/: infer_DnCNN.py  requirements.txt  sample_io.py  train.py  train_DnCNN.py
main/TraMagNet/: gan5_train.py  train.py
main/cnn/: infer_dncnn.py  sample_io.py  train_dncnn.py
main/data_common/: __init__.py  argparse_compat.py  cv_ensemble.py  cv_train.py  dataset_paths.py  ensemble_infer.py  eval_split.py  flat_pairing.py  infer_cv.py  normalization.py  our_data_split.py  pair_specs.py  pooled_data_split.py  pooled_our_data_dataset.py  rename_manifest.py  reproducibility.py  resolve_dataset_root.py  split_82.py  train_data_factory.py  txt_io.py  viz_ckpt_resolve.py  viz_cnn_runner.py  viz_dncnn_runner.py  viz_export.py  viz_export_workers.py  viz_method_splits.py  viz_pooled.py  viz_split.py  viz_tramagnet_runner.py  ztest5_paths.py
main/splits/: data1_split8020_seed42.json
main/traditional/: run_py_denoise_methods.py
scripts/: evaluate.py  infer_traditional.py  train.py
splits/: ztest5_data134_manifest.json
src/TraMagNet/: __init__.py
tests/: __init__.py  test_reproducibility.py
(+5293 files in other folders)
