[project]
name = "tramagnet-denoising"
version = "1.0.0"
description = "TraMagNet magnetic signal denoising — paper reproduction scripts (see README)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "torch>=2.1.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
  "PyWavelets>=1.4.0",
  "rich>=13.0.0",
  "PyYAML>=6.0",
]
